fix wizard section alignments

--- a/src/assets/stylesheets/_layout.scss
+++ b/src/assets/stylesheets/_layout.scss
@@ -142,6 +142,10 @@ body
 
 }
 
+.flex-align-content-stretch
+{
+  align-content: stretch;
+}
 
 .app{
   @extend .flex-grow-1;
